--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
     <title>Coding Quiz</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <p class="intro">This is a quiz that will challenge your knowledge Javascript, CSS, and HTML. The best scores will be saved under the "Highscores" link</p>
 
             <!-- start button -->
-            <button id="startButton">Start</button>
+            <button id="startButton" class="startButton btn">Start</button>
         </div>
         </section>
 
@@ -41,7 +41,7 @@
             <button id="next-btn" class = "next-btn btn hide">Next</button>
         </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
     
 </body>
 </html>
