--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class='highscores'>Highscores</h1>
+    <ul id="highscoreList">
+        <li></li>
+    </ul>
 </body>
 </html>
