finally got the localstorage highscores to work but it still won't stay on the page

--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
+
     <title>Document</title>
 </head>
 <body>
-    <h1 class='highscores'>Highscores</h1>
-    <ul id="highscoreList">
-        <li></li>
+    <h1 class='highscoresTitle'>Highscores<br></h1>
+
+    <ul id='highScoresList'>
+        <li>|Scores|</li>
     </ul>
+    <script src="./js/highscores.js"></script>
 </body>
 </html>
