--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <section id="full-start-screen">
     <div> <!--Create <a> tag to reference highscores.html-->
-        <a id='highscores' href="./assets/highscores.html">Highscores</a>
+        <a id='highscores' class="highscores" href="./assets/highscores.html">Click here for highscores!</a>
     </div>
     
         <div id="start-screen" class="start">
-            <h1>Coding Quiz Challenge</h1>
+            <h1 class="highscoresTitle">Coding Quiz Challenge</h1>
             <!-- p tag with an intro about quiz-->
             <p class="intro">This is a quiz that will challenge your knowledge Javascript, CSS, and HTML. The best scores will be saved under the "Highscores" link</p>
 
