adding some styling to the start button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
 
-        <button id="startButton" class="startButton btn">Start</button>
+        <button id="startButton" class="startButton btn">START</button>
 
         <div id="question-container" class="hide">
         <div id="question">Question</div>
